Add Method to UploadFile by existing FileUrl (Overwrite) Add Common CAML Queries Helper

--- a/MIP.SharePoint.API/MIP.SharePoint.API.csproj
+++ b/MIP.SharePoint.API/MIP.SharePoint.API.csproj
@@ -86,6 +86,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caml\CommonQueries.cs" />
     <Compile Include="Caml\Queries.cs" />
     <Compile Include="CSOM\SPContext.cs" />
     <Compile Include="CSOM\SPObjectModel.cs" />
