--- a/MIP.SharePoint.API/MIP.SharePoint.API.csproj
+++ b/MIP.SharePoint.API/MIP.SharePoint.API.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Office.Client.Policy, Version=16.1.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
@@ -78,6 +80,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -94,20 +99,33 @@
     <Compile Include="Extensions\SharePointExtensions.cs" />
     <Compile Include="Helper\HashHelper.cs" />
     <Compile Include="Helper\UrlHelper.cs" />
+    <Compile Include="Model\Attributes\SPFieldAttribute.cs" />
+    <Compile Include="Model\Attributes\SPListAttribute.cs" />
+    <Compile Include="Model\Attributes\SpLookupFieldAttribute.cs" />
     <Compile Include="Model\Field\FieldUpdate.cs" />
     <Compile Include="Model\Field\IFieldUpdate.cs" />
+    <Compile Include="MetadataProcessor\IDocument.cs" />
+    <Compile Include="MetadataProcessor\ISPListInfo.cs" />
+    <Compile Include="MetadataProcessor\ISPListInfoLookup.cs" />
+    <Compile Include="MetadataProcessor\ISPMetadataProcessor.cs" />
+    <Compile Include="MetadataProcessor\LocalFileDocument.cs" />
     <Compile Include="Model\LookupField\ILookupFieldUpdate.cs" />
     <Compile Include="Model\LookupField\LookupFieldUpdate.cs" />
     <Compile Include="Model\MetaData.cs" />
+    <Compile Include="MetadataProcessor\SPListInfo.cs" />
+    <Compile Include="MetadataProcessor\SPListInfoLookup.cs" />
+    <Compile Include="MetadataProcessor\SPMetadataProcessor.cs" />
     <Compile Include="Model\TaxonomyField\ITaxonomyFieldUpdate.cs" />
     <Compile Include="Model\TaxonomyField\TaxonomyFieldUpdate.cs" />
     <Compile Include="Model\UserField\IUserFieldUpdate.cs" />
     <Compile Include="Model\UserField\UserFieldUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Helper\AttributeHelper.cs" />
     <Compile Include="Utils\StreamUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
