+Adds support to Get Attachments from List Items Changes to tie List Item Update process Refactor

--- a/MIP.SharePoint.API/MIP.SharePoint.API.csproj
+++ b/MIP.SharePoint.API/MIP.SharePoint.API.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Extensions\SharePointExtensions.cs" />
     <Compile Include="Helper\HashHelper.cs" />
     <Compile Include="Helper\UrlHelper.cs" />
+    <Compile Include="Model\Attachment\FileAttachment.cs" />
     <Compile Include="Model\Attributes\SPFieldAttribute.cs" />
     <Compile Include="Model\Attributes\SPListAttribute.cs" />
     <Compile Include="Model\Attributes\SpLookupFieldAttribute.cs" />
