--- a/MIP.SharePoint.API/MIP.SharePoint.API.csproj
+++ b/MIP.SharePoint.API/MIP.SharePoint.API.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Helper\HashHelper.cs" />
     <Compile Include="Helper\UrlHelper.cs" />
     <Compile Include="Model\Attachment\FileAttachment.cs" />
+    <Compile Include="Model\Attributes\SPTaxonomyFieldAttribute.cs" />
+    <Compile Include="Model\Attributes\SPUserFieldAttribute.cs" />
     <Compile Include="Model\Attributes\SPFieldAttribute.cs" />
     <Compile Include="Model\Attributes\SPListAttribute.cs" />
     <Compile Include="Model\Attributes\SpLookupFieldAttribute.cs" />
